# LISAgentValidation

./: .gitignore  CNAME  CONTEXT.md  IMPL_SPEC.md  LICENSE  PLAN.md  README.md  index.html
demo/: .env.example  .gitignore  README.md  docker-compose.yml  gcp_setup.sh  main.py  pyproject.toml  run_gcp_setup.sh  start.sh  stop.sh
demo/agent/: task_prompt.md
demo/config/: clinical_knowledge.SAMPLE.json
demo/harness/: expected_outcomes.csv  provenance_verifier.py  report.py  run_validation.py  scenarios.csv
demo/server/: Dockerfile  circuit_breaker.py  lims_db.py  lims_server.py  requirements.txt  services.py  settings.py
demo/server/commands/: advance_sample.py  apply_autoverification.py  create_sample.py
demo/server/events/: store.py  types.py
demo/server/middleware/: auth.py  logging.py  throttling.py
demo/server/queries/: get_audit_log.py  query_knowledge.py
demo/tests/: test_data_integrity.py  test_infrastructure.py  test_lims_db.py  test_lims_server.py  test_provenance_verifier.py  test_report.py  test_run_validation.py
demo/ui/: Dockerfile  app.py  requirements.txt  trajectory.json  verified_run_decisions.json  verified_run_results.json
demo/wheels/: lis_triage_engine-1.0.0-py3-none-any.whl
landing-page/: DEPLOY.md  README.md  index.html
lis-swap-contamination-triage/: instruction.md  task.toml
lis-swap-contamination-triage/environment/: Dockerfile  pyproject.toml
lis-swap-contamination-triage/environment/data/: clinical_knowledge.json  hidden_batch.json  hidden_batch_nolabels.json  visible_batch.json  visible_batch_nolabels.json  workflow.json
lis-swap-contamination-triage/environment/src/: triage.py
lis-swap-contamination-triage/environment/src/lis_triage_engine/: __init__.py  triage.py
methodology/: KNOWLEDGE_GROUNDED_EVALUATION_PATTERN.md
spec/: 01_lims_db.md  02_lims_server.md  03_scenarios.md  04_provenance_verifier.md  05_report.md  06_run_validation.md  07_agent_prompt.md  (+1 more)
(+5 files in other folders)
