[project]
name = "lis-triage-engine"
version = "1.0.0"
description = "LIS specimen triage scoring engine"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
lis-triage = "lis_triage_engine.triage:main"

[tool.uv]
package = true

[dependency-groups]
dev = []

[tool.setuptools.packages.find]
where = ["src"]
